# debilek-bot

./: .dockerignore  .env.template  Cargo.toml  Dockerfile  Dockerfile.arm  README.md
.github/workflows/: build-arm-docker-deploy.yml  docker-build-deploy.yml
src/: asset_processing.rs  commands.rs  constants.rs  enums.rs  extensions.rs  main.rs  traits.rs  types.rs  voice.rs
