[package]
name = "debilek-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
poise = "0.6.1"
songbird = { version = "0.5.0", default-features = true }

tokio = { version = "1.45.1", features = ["full"] }
reqwest = { version = "0.12.19", features = ["blocking", "json"] }
once_cell = "1.19"
rand = "0.9.1"
dotenv = "0.15"
walkdir = "2.5.0"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
symphonia = { version = "0.5.4", features = ["aac", "mp3", "isomp4", "alac"] }

[dev-dependencies]
cross = "0.2.5"


[[bin]]
name = "debilek-bot"
path = "src/main.rs"

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get install -y curl unzip build-essential pkg-config libssl-dev:$CROSS_DEB_ARCH ca-certificates && rm -rf /var/lib/apt/lists/*",
    "curl -L https://github.com/Kitware/CMake/releases/download/v3.27.0/cmake-3.27.0-linux-aarch64.tar.gz -o cmake.tar.gz",
    "tar -xzf cmake.tar.gz",
    "cp -r cmake-3.27.0-linux-aarch64/bin/* /usr/local/bin/",
    "cp -r cmake-3.27.0-linux-aarch64/share/* /usr/local/share/",
    "rm -rf cmake.tar.gz cmake-3.27.0-linux-aarch64"
]