[package]
name = "debilek-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
poise = "0.6.1"
songbird = { version = "0.5.0", default-features = true }

tokio = { version = "1.45.1", features = ["full"] }
reqwest = { version = "0.12.19", features = ["blocking", "json"] }
once_cell = "1.19"
rand = "0.9.1"
dotenv = "0.15"
walkdir = "2.5.0"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
symphonia = { version = "0.5.4", features = ["aac", "mp3", "isomp4", "alac"] }
openssl = { version = "0.10.73", features = ["vendored"] }

[dev-dependencies]
cross = "0.2.5"


[[bin]]
name = "debilek-bot"
path = "src/main.rs"

